# anchor-paper-wallet

./: .gitignore  Anchor.toml
programs/anchor-paper-wallet/: Cargo.toml
programs/anchor-paper-wallet/src/: lib.rs
tests/: anchor-paper-wallet.ts
